salesforce/force-app/main/default/objects/Case/fields/Auto_Extracted_Account__c.field-meta.xml
<CustomField>
    <fullName>Auto_Extracted_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account automatically matched from sender email domain</description>
    <label>Auto-Extracted Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Auto-Extracted)</relationshipLabel>
    <relationshipName>Auto_Extracted_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>