salesforce/force-app/main/default/objects/Case/fields/Extracted_Topics__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Topics__c</fullName>
    <description>AI-extracted topics from email content</description>
    <label>Extracted Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Review</fullName>
            </value>
            <value>
                <fullName>Pricing Inquiry</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Renewal Discussion</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Product Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>