salesforce/force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Type of inbound email request for routing</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Renewal Alert</fullName>
            </value>
            <value>
                <fullName>Quote Request</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>